flex issue on mobile in project cards

--- a/src/app/about/employment/employment.component.scss
+++ b/src/app/about/employment/employment.component.scss
@@ -1,7 +1,3 @@
-div {
-  font-family: 'Tenor Sans', sans-serif;
-}
-
 .classroom-pic {
     box-shadow: 0px 0px 2px 2px rgba(0, 0, 0, 0.1);
     width: 245px;
@@ -12,31 +8,4 @@ div {
   max-width: 875px;
   display: flex;
   margin: auto;
-  justify-content: space-around;
-  align-items: center;
-  align-content: center;
-  flex-wrap: wrap;
-}
-
-.next {
-  display: flex;
-  justify-content: space-between;
-  width: 100%;
-}
-
-.route-card {
-  width: 85px;
-  color: #1a2d42;
-  text-align: center;
-  font-size: 45px;
-  font-family: 'Tenor Sans', sans-serif;
-}
-
-.route-card:hover {
-  cursor: pointer;
-}
-
-.route-pic {
-  width: 50px;
-  vertical-align: bottom;
 }
