--- a/src/app/my-projects/project-card/project-card.component.scss
+++ b/src/app/my-projects/project-card/project-card.component.scss
@@ -1,34 +1,10 @@
-.article {
-  overflow: hidden;
-  margin-bottom: 0px;
-  height: 78px;
-}
-
 div {
+  max-width: 1500px;
   flex-wrap: wrap;
   margin: auto;
   justify-content: center;
-  font-family: 'Tenor Sans', sans-serif;
-  align-content: center;
   align-items: flex-start;
   display: flex;
-  font-family: 'Tenor Sans', sans-serif !important;
-}
-
-h3 {
-  margin: 25px auto 10px;
-}
-
-.info {
-  justify-content: flex-start
-}
-
-.card-container {
-  max-width: 1500px;
-}
-
-.invisible {
-  display: none;
 }
 
 a {
@@ -45,12 +21,13 @@ a:visited {
   color: black;
 }
 
-mat-card {
+:host ::ng-deep mat-card {
   width: 800px;
   margin: 25px;
   border: black 1px solid;
   background-color: white;
   transition: background-color 2s, color 500ms;
+  font-family: 'Tenor Sans', sans-serif;
 }
 
 mat-card:hover {
@@ -59,50 +36,19 @@ mat-card:hover {
   color: #1a2d42;
 }
 
-.mat-card-footer {
-    display: flex;
-    align-content: center;
-    flex-direction: column;
-    padding: 20px;
-}
-
 mat-card-title {
-  font-size: 23px;
-}
-
-mat-card-header {
-  display: flex;
-  justify-content: left;
-  padding-left: 15px;
+  font-size: 23px !important;
 }
 
 :host ::ng-deep .mat-card-subtitle:not(:first-child):visited {
   color: black;
 }
 
-.mat-card-actions .mat-button, .mat-card-actions .mat-raised-button, .mat-card-actions .mat-stroked-button {
-  margin: 8px;
-}
-
-button:hover {
-    background-color: #1a2d42;
-    transition: background-color 2s, color 500ms;
-    color: white;
-  }
-  button:active {
-    background-color: #1a2d42;
-    color: white;
-  }
-
-.header-image {
-  background-size: cover;
-  border-radius: 0px;
-  width: 20px;
+.logo-image {
+  width: 40px !important;
+  height: 40px !important;
   margin: 5px;
-  justify-content: space-around;
-  align-items: center;
-  align-content: center;
-  text-align: center;
+  border-radius: 0% !important;
 }
 
 .mat-card-image {
@@ -113,16 +59,17 @@ button:hover {
   margin: auto !important;
 }
 
-.mat-card>:first-child, mat-card-content>:first-child {
- margin: auto  !important;
-}
-
 mat-card-subtitle {
-  font-size: 20px;
+  font-size: 20px !important;;
   margin: auto;
   padding: 5px 0px 15px 25px;
-  font-family: 'Tenor Sans', sans-serif !important;
 }
+
+a:hover {
+  transition: color 2s;
+  color: #d0d0d0;
+}
+
 
 :host ::ng-deep a:visited {
   color: black;
@@ -139,29 +86,32 @@ mat-card-content {
   margin: auto;
 }
 
-p {
-  margin-block-end: 0em;
-  font-size: 20px;
-  font-weight: bold;
-  padding-top: 20px;
-}
-
-mat-accordion {
-  padding-top: 20px;
-}
+:host ::ng-deep .mat-card-header-text {
+  display: block;
+  margin: 0px;
+  }
 
 ::ng-deep mat-tab-label-active{
   background-color: red;
 }
 
-::ng-deep mat-tab-label{
-  opacity: 1 !important;
+
+:host ::ng-deep .mat-tab-label {
+  border-width: 9px;
+  border-style: solid;
+  border-color: orange;
   min-width: 130px !important;
   font-size: 20px !important;
+  font-family: 'Tenor Sans', sans-serif;
 }
 
-/* Responsive Styles */
-@media only screen and (max-width: 389px) {
+::ng-deep .mat-tab-list .mat-tab-labels .mat-tab-label-active {
+  color: red;
+  background-color: green;
+  opacity: 1;
+}
+
+@media only screen and (max-width: 420px) {
   mat-card {
     margin: 25px 5px;
     max-width: 300px;
@@ -169,10 +119,7 @@ mat-accordion {
   .mat-card-title {
     font-size: 21px;
   }
-}
-
-@media only screen and (max-width: 420px) {
- .computer-image {
+  .computer-image {
     max-width: 250px;
   }
 }
